stylesheet.scss
/*** Reset ***/
@import 'normalize';

html {
  box-sizing: border-box;
}
*, *::before, *::after {
  box-sizing: inherit;
}


/*** Colors ***/
$light-brown: #9b8579;
$brown: #594a42;
$green: #8dc63f;
$orange: #f7941e;
$tan: #c49a6c;
$light-tan: #c2b59b;
$dark-gray: #414042;
$medium-sea-green: #39b54a;
$linen: #e7e1d7;

$light-blue: #00aeef;
$dark-blue: #1c75bc;
$dark-green: #009444;
$dark-orange: #f15a29;


/*** Variables ***/
$gutter-margin: 15px;
$small-min-width: 48em;  /* 768px for default 16px/em */
$extra-small-max-width: $small-min-width - 0.0625;  /* removing 1 pixel */
$medium-min-width: 62em;
$max-content-width: 75rem; /* large device breakpoint = 1200px */

@mixin extra-small-only() {
  @media only screen and (max-width: $extra-small-max-width) {
    @content;
  }
}

@mixin small-and-above() {
  @media only screen and (min-width: $small-min-width) {
    @content;
  }
}

@mixin medium-and-above() {
  @media only screen and (min-width: $medium-min-width) {
    @content;
  }
}

@mixin flex-column($fraction) {
  flex: 0 0 percentage($fraction);
  // from bootstrap:
  // Add a `max-width` to ensure content within each column does not blow out
  // the width of the column. Applies to IE10+ and Firefox. Chrome and Safari
  // do not appear to require this.
  max-width: percentage($fraction);
}


/*** Base Styles ***/
html {
  font-size: 100%;
}

body {
  color: $dark-gray;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: normal;
}

h1, h2, h3 {
  font-weight: bold;
}

a {
  color: $green;
  font-weight: bold;
  &:hover, &:focus {
    text-decoration: underline;
  }
}


/*** Grid ***/
.container {
  padding-right: $gutter-margin;
  padding-left: $gutter-margin;
  margin-right: auto;
  margin-left: auto;
  max-width: $max-content-width;
}

.row {
  margin-right: -$gutter-margin;
  margin-left: -$gutter-margin;
  display: flex;
  flex-flow: column;

  [class*='col-'] {
    position: relative;
    padding-left: $gutter-margin;
    padding-right: $gutter-margin;
    width: 100%;
  }

  @include medium-and-above() {
    flex-flow: row;

    .col-1-2 {
      @include flex-column(1/2);
    }
    .col-1-3 {
      @include flex-column(1/3);
    }
    .col-1-4 {
      @include flex-column(1/4);
    }
    .col-1-6 {
      @include flex-column(1/6);
    }
    .col-2-3 {
      @include flex-column(2/3);
    }

    &.sm-row-reverse {
      flex-direction: row-reverse;
    }
  }
}

.remove-gutter-xs {
  @include extra-small-only() {
    padding-left: 0 !important;
    padding-right: 0 !important;
  }
}


/*** Themes ***/
.feature-green {
  background: $green;
}

.feature-orange {
  background: $orange;
}

.feature-tan {
  background: $tan;
}

.background-primary {
  background: $orange;
}
.background-secondary {
  background: $light-blue;
}
.background-tertiary {
  background: $green;
}
.background-quaternary {
  background: $brown;
}


.footer {
  background: $brown;
  color: $light-brown;
}

.footer-divider {
  @include medium-and-above() {
    min-height: 1px;
    background: white;
  }
}

.footer-legal {
  font-size: 1rem;
  a {
    color: $light-brown;
  }
}


/*** Button Modules ***/
.btn {
  display: inline-block;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  background-image: none;
  border: 1px solid transparent;
  cursor: pointer;
  text-decoration: none;

  padding: 12px 30px;
  font-size: (21/16) + 0em;
  font-weight: bold;
  border-radius: 4px;
  line-height: 1;

  transition: all 0.3s ease 0s;

  @include medium-and-above() {
    padding: 10px 15px;
    font-size: (18/16) + 0em;
    font-weight: normal;
  }
}

.btn--primary {
  color: white;
  background: $green;
  border-color: $green;
  &:hover, &:focus {
    background: none;
    border-color: white;
    text-decoration: none;
  }
}

.btn--hero {
  white-space: normal;
  color: white;
  border-color: white;
  padding: 15px 30px;
  font-size: (28/16) + 0em;
  text-transform: uppercase;
  font-weight: normal;
  &:hover, &:focus {
    background: white;
    color: $medium-sea-green;
    text-decoration: none;
  }
}

.btn--nav {
  color: white;
}


/*** Header and Navigation Modules ***/
.header {
  background: $light-brown;
  color: white;
  padding-top: 18px;
  padding-bottom: 18px;
  @include medium-and-above() {
    padding-top: 30px;
    background: transparent;
    position: absolute;
    z-index: 9999;
    width: 100%;
  }
}

.nav {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-flow: column;
  align-items: center;
  margin-top: 23px;  // 35px minus 12px padding

  @include medium-and-above() {
    flex-flow: row;
    margin-top: 0;
    height: 100%;
    justify-content: space-between;
    align-items: flex-end;
  }

  > :last-child {
    margin-top: 12px;
    @include medium-and-above() {
      margin-top: 0;
    }
  }
}
.logo {
  overflow: hidden;
  display: block;
  width: 64px;
  height: 64px;
  margin-left: auto;
  margin-right: auto;

  @include medium-and-above() {
    overflow: visible;
    width: auto;
    height: 50px;
  }

  img {
    height: 100%;
  }
}


/*** Hero Modules ***/
.hero {
  color: white;
  text-align: center;
  padding-top: 80px;
  padding-bottom: 25px;
  position: relative;
  @include medium-and-above() {
    padding-top: 150px;
  }
}
.hero__header {
  margin: 0 auto;
  font-size: (42/16) + 0em;
  font-weight: bold;
}
.hero__body {
  margin: 50px auto;
  font-size: (24/16) + 0em;
  line-height: 1.8;
  max-width: 40em;
}

// centered background image controlled by child img element,
// requires position: relative on parent container
.bg-image {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  overflow: hidden;
  img {
    position: absolute;
    min-width: 100%;
    min-height: 100%;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
  }
  &::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background-color: $brown;
    opacity: 0.55;
  }
  ~ * {
    position: relative;
  }
}


/*** Media Modules ***/
.media-section {
  background: $linen;
  padding-top: 20px;
  padding-bottom: 20px;
}
.media {
  padding-top: 20px;
  padding-bottom: 20px;
  display: flex;
  flex-flow: wrap;
  justify-content: center;
}
.media__icon {
  font-size: 150px;
  color: $brown;
  width: 160px;
}
.media__content {
  flex: 1;
  line-height: 1.6;
}
.media__heading {
  margin: 0;
  font-size: (28/16) + 0em;
  font-weight: bold;
}
.media__body {
  font-size: (18/16) + 0em;
  margin: 0 0 40px 0;
  padding-right: 20px;
}
.font125px {
  font-size: 125px !important;
}

.testimonial {
  position: relative;
  color: white;
  text-align: center;
  padding-top: 40px;
  padding-bottom: 40px;
  opacity: .75;
  @include medium-and-above() {
    padding-top: 60px;
    padding-bottom: 60px;
  }
}
.testimonial__rating {
  font-size: (60/16) + 0em;
  line-height: 1.3;
  text-shadow: 0 0 8px black;
  @include medium-and-above() {
    font-size: (72/16) + 0em;
  }
}
.testimonial__body {
  margin-top: 50px;
  font-size: (24/16) + 0em;
  font-style: italic;
  line-height: 1.75;
  @include medium-and-above() {
    max-width: 35em;
    margin: 60px auto 0;
    font-size: (26/16) + 0em;
  }
}
.testimonial__author {
  display: inline-block;
  font-weight: bold;
  font-style: normal;
  &::before {
    content: " - ";
  }
}

